--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -3010,10 +3010,10 @@ components:
           type: number
           description: Optional validity duration of the link in minutes. Defaults to 1 hour.
           default: 60
-        noRequesterPays:
+        requesterPays:
           type: boolean
-          description: Do not use the pet service account project as the user project in the request
-          default: false
+          description: Use the pet service account project as the user project in the request.
+          default: true
     CreateResourceRequest:
       required:
         - policies
