Updated swagger doc and added more tests

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -72,6 +72,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorReport'
+  /api/admin/v2/user/{userId}:
+    get:
+      tags:
+        - Admin
+      summary: Retrieves a user record, by user id
+      operationId: adminGetUser
+      parameters:
+        - name: userId
+          in: path
+          description: User ID of the user to be retrieved
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: User was retrieved successfully
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/User'
+        403:
+          description: You do not have admin privileges
+          content: { }
+        404:
+          description: User not found
+          content: { }
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
   /api/admin/v1/user/email/{email}:
     get:
       tags:
@@ -3555,12 +3587,39 @@ components:
       description: specifies a request for a pet managed identity
     User:
       required:
-        - email
       type: object
       properties:
+        id:
+          type: string
+          description: User's Id
+        googleSubjectId:
+          type: string
+          description: User's Google subject Id
         email:
           type: string
           description: User's email address
+          format: email
+        azureB2CId:
+          type: string
+          description: User's Azure B2C Id
+        enabled:
+          type: boolean
+          description: Whether or not the user is enabled
+        acceptedTosVersion:
+          type: string
+          description: The version of terms of service the user accepted
+        createdAt:
+          type: string
+          format: date-time
+          description: User's time of creation
+        registeredAt:
+          type: string
+          format: date-time
+          description: User's time of registration
+        updatedAt:
+          type: string
+          format: date-time
+          description: User's time of last update
       description: specification of a User
   securitySchemes:
     googleoauth:
