Updated swagger doc to support user record returning and made UpdateUserRequest

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -56,7 +56,7 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UpdateUserRequest'
       responses:
         200:
           description: User was updated successfully
@@ -3621,8 +3621,13 @@ components:
           example: my-managed-resource-group
       description: specifies a request for a pet managed identity
     User:
-      required:
       type: object
+      required:
+        - id
+        - email
+        - enabled
+        - createdAt
+        - updatedAt
       properties:
         id:
           type: string
@@ -3656,6 +3661,26 @@ components:
           format: date-time
           description: User's time of last update
       description: specification of a User
+    UpdateUserRequest:
+      type: object
+      properties:
+        googleSubjectId:
+          type: string
+          description: User's Google subject Id
+        email:
+          type: string
+          description: User's email address
+          format: email
+        azureB2CId:
+          type: string
+          description: User's Azure B2C Id
+        enabled:
+          type: boolean
+          description: Whether or not the user is enabled
+        acceptedTosVersion:
+          type: string
+          description: The version of terms of service the user accepted
+      description: specification of a UpdateUserRequest
   securitySchemes:
     googleoauth:
       type: oauth2
