Renamed PolicyIdentifiersRequestBody to just PolicyIdentifiers in swagger doc

--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -3038,7 +3038,7 @@ components:
         memberPolicies:
           type: array
           items:
-            $ref: '#/components/schemas/PolicyIdentifiersRequestBody'
+            $ref: '#/components/schemas/PolicyIdentifiers'
         actions:
           type: array
           items:
@@ -3236,7 +3236,7 @@ components:
           description: The email address associated with the group
       description: specification of a managed group with an access policy and the
         email associated with the managed group
-    PolicyIdentifiersRequestBody:
+    PolicyIdentifiers:
       required:
         - policyName
         - resourceTypeName
