--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -37,7 +37,7 @@ opencensus-scala {
 }
 
 termsOfService {
-  enabled = ${?TOS_ENABLED}
+  isTosEnabled = ${?TOS_ENABLED}
   isGracePeriodEnabled = ${?TOS_GRACE_PERIOD_ENABLED}
   version = ${?TOS_VERSION}
   url = ${?TOS_URL}
