--- a/env/test.env
+++ b/env/test.env
@@ -1,3 +1,4 @@
+export SERVICE_ACCOUNT_ADMINS="service-admin@dev.test.firecloud.org, service-admin2@dev.test.firecloud.org"
 export AZURE_ENABLED="false"
 export AZURE_MANAGED_APP_CLIENT_ID="foo"
 export AZURE_MANAGED_APP_CLIENT_SECRET="foo"
