--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -169,6 +169,7 @@ admin {
       ,${?GOOGLE_SERVICE_ACCOUNT_DOMAIN}
       , "developer.gserviceaccount.com"
     ]
+  serviceAccountAdmins = ${?SERVICE_ACCOUNT_ADMINS}
 }
 
 azureServices {
