updated pact reference.cofn

--- a/pact4s/src/test/resources/reference.conf
+++ b/pact4s/src/test/resources/reference.conf
@@ -187,6 +187,7 @@ termsOfService {
 admin {
   superAdminsGroup = "sam-super-admins@dev.test.firecloud.org"
   allowedAdminEmailDomains = ["test.firecloud.org"]
+  serviceAccountAdmins = "service-admin@dev.test.firecloud.org, service-admin2@dev.test.firecloud.org"
 }
 
 prometheus {
