Add snapshot builder config view action

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1181,6 +1181,9 @@ resourceTypes = {
       view_journal = {
         description = "View dataset journal entries"
       }
+      view_snapshot_builder_config = {
+        description = "allows viewing the snapshot builder config"
+      }
     }
     ownerRoleName = "steward"
     roles = {
