Actually add action to roll

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1200,7 +1200,7 @@ resourceTypes = {
         roleActions = ["read_dataset", "read_data", "read_policies", "link_snapshot"]
       }
       admin = {
-        roleActions = ["share_policy::steward", "read_policies", "alter_policies"]
+        roleActions = ["share_policy::steward", "read_policies", "alter_policies", "view_snapshot_builder_config"]
       }
     }
     reuseIds = true
