--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -128,7 +128,7 @@ db {
     poolMaxSize = 5
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://"localhost":"5432"/testdb?stringtype=unspecified"
+    url = "jdbc:postgresql://"${postgres.host}":"${postgres.port}"/testdb?stringtype=unspecified"
     user = "sam-test"
     password = "sam-test"
   }
@@ -139,7 +139,7 @@ db {
     poolMaxSize = 5
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://"localhost":"5432"/testdb?stringtype=unspecified"
+    url = "jdbc:postgresql://"${postgres.host}":"${postgres.port}"/testdb?stringtype=unspecified"
     user = "sam-test"
     password = "sam-test"
   }
