--- a/src/main/resources/swagger/api-docs.yaml
+++ b/src/main/resources/swagger/api-docs.yaml
@@ -124,6 +124,56 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserStatus'
+  /api/admin/v2/users:
+    get:
+      tags:
+        - Admin
+      summary: gets the users which match the any of the query params
+      operationId: adminGetUsersByQuery
+      parameters:
+        - name: id
+          in: query
+          description: User Id to find users by
+          schema:
+            type: string
+        - name: googleSubjectId
+          in: query
+          description: GoogleSubjectId to find users by
+          schema:
+            type: string
+        - name: azureB2CId
+          in: query
+          description: AzureB2CId to find users by
+          schema:
+            type: string
+        - name: limit
+          in: query
+          description: Maximum number of results returned (max 1000)
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 1000
+      responses:
+        200:
+          description: list of matching users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                   $ref: '#/components/schemas/User'
+        403:
+          description: You do not have service admin privileges
+          content: { }
+        404:
+          description: No matching users found
+          content: { }
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorReport'
   /api/admin/v1/user/{userId}/disable:
     put:
       tags:
