--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1181,6 +1181,9 @@ resourceTypes = {
       view_journal = {
         description = "View dataset journal entries"
       }
+      view_snapshot_builder_settings = {
+        description = "allows viewing the snapshot builder settings"
+      }
     }
     ownerRoleName = "steward"
     roles = {
@@ -1197,7 +1200,7 @@ resourceTypes = {
         roleActions = ["read_dataset", "read_data", "read_policies", "link_snapshot"]
       }
       admin = {
-        roleActions = ["share_policy::steward", "read_policies", "alter_policies"]
+        roleActions = ["share_policy::steward", "read_policies", "alter_policies", "view_snapshot_builder_settings"]
       }
     }
     reuseIds = true
