Add update_snapshot_builder_settings action

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1184,6 +1184,9 @@ resourceTypes = {
       view_snapshot_builder_settings = {
         description = "allows viewing the snapshot builder settings"
       }
+      update_snapshot_builder_settings = {
+        description = "allows updating the snapshot builder settings"
+      }
     }
     ownerRoleName = "steward"
     roles = {
@@ -1200,7 +1203,7 @@ resourceTypes = {
         roleActions = ["read_dataset", "read_data", "read_policies", "link_snapshot"]
       }
       admin = {
-        roleActions = ["share_policy::steward", "read_policies", "alter_policies", "view_snapshot_builder_settings"]
+        roleActions = ["share_policy::steward", "read_policies", "alter_policies", "view_snapshot_builder_settings", "update_snapshot_builder_settings"]
       }
     }
     reuseIds = true
