add new resource type vwb-app with owner, writer, reader role

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1430,6 +1430,44 @@ resourceTypes = {
     }
     reuseIds = false
   }
+  vwb-app = {
+    actionPatterns = {
+      read_policies = {
+        description = "view all policies and policy details for this app"
+      }
+      "share_policy::owner" = {
+        description = "change the membership of the owner policy for this app"
+      }
+      "share_policy::writer" = {
+        description = "change the membership of the writer policy for this app"
+      }
+      "share_policy::reader" = {
+        description = "change the membership of the reader policy for this app"
+      }
+      "read" = {
+        description = "perform reader actions on the app"
+      }
+      "write" = {
+        description = "perform writer actions on the app"
+      }
+      delete = {
+        description = "delete this app"
+      }
+    }
+    ownerRoleName = "owner"
+    roles = {
+      owner = {
+        roleActions = ["delete", "read_policies", "read", "write", "share_policy::owner", "share_policy::writer", "share_policy::reader"]
+      }
+      writer = {
+        roleActions = ["read", "write"]
+      }
+      reader = {
+        roleActions = ["read"]
+      }
+    }
+    reuseIds = false
+  }
 }
 
 
