--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -705,11 +705,14 @@ resourceTypes = {
       list_children = {
         description = "list children, e.g. google-project"
       }
+      own = {
+        description = "perform owner actions on this billing project"
+      }
     }
     ownerRoleName = "owner"
     roles = {
       owner = {
-        roleActions = ["view_status", "create_workspace", "alter_policies", "read_policies", "launch_batch_compute", "list_notebook_cluster", "launch_notebook_cluster", "delete_notebook_cluster", "list_persistent_disk", "create_persistent_disk", "delete_persistent_disk", "create_kubernetes_app", "alter_google_role", "add_to_service_perimeter", "delete", "update_billing_account", "alter_spend_report_configuration", "read_spend_report_configuration", "read_spend_report", "list_children", "remove_child", "add_child"]
+        roleActions = ["view_status", "create_workspace", "alter_policies", "read_policies", "launch_batch_compute", "list_notebook_cluster", "launch_notebook_cluster", "delete_notebook_cluster", "list_persistent_disk", "create_persistent_disk", "delete_persistent_disk", "create_kubernetes_app", "alter_google_role", "add_to_service_perimeter", "delete", "update_billing_account", "alter_spend_report_configuration", "read_spend_report_configuration", "read_spend_report", "list_children", "remove_child", "add_child", "own"]
         descendantRoles = {
           google-project = ["owner"]
         }
