Allow admins to delete spend profiles
Enables the use of the admin delete profile option to delete cloud resources

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1100,7 +1100,7 @@ resourceTypes = {
         roleActions = ["link", "share_policy::user", "share_policy::pet-creator", "read_policy::pet-creator", "add_child", "create-pet"]
       }
       admin = {
-        roleActions = ["share_policy::owner", "read_policies", "alter_policies"]
+        roleActions = ["share_policy::owner", "read_policies", "alter_policies", "delete"]
       }
       pet-creator = {
         roleActions = ["create-pet", "share_policy::pet-creator", "read_policy::pet-creator"]
