Don't allow reusing IDs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1282,7 +1282,7 @@ resourceTypes = {
         roleActions = ["read_policies", "share_policy::steward", "alter_policies"]
       }
     }
-    reuseIds = true
+    reuseIds = false
     authDomainConstrainable = true
   }
   service-perimeter = {
