--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1224,6 +1224,7 @@ resourceTypes = {
       }
       read_data = {
         description = "Read data from the datasnapshot"
+        authDomainConstrainable = true
       }
       discover_data = {
         description = "Discover data about the datasnapshot"
@@ -1257,6 +1258,7 @@ resourceTypes = {
       }
       export_snapshot = {
         description = "Export snapshot to a Terra workspace"
+        authDomainConstrainable = true
       }
       view_journal = {
         description = "View datasnapshot journal entries"
@@ -1280,7 +1282,8 @@ resourceTypes = {
         roleActions = ["read_policies", "share_policy::steward", "alter_policies"]
       }
     }
-    reuseIds = true
+    reuseIds = false
+    authDomainConstrainable = true
   }
   service-perimeter = {
     actionPatterns = {
