ID-792 Load Terms of Service docs from remote sources

--- a/env/test.env
+++ b/env/test.env
@@ -31,7 +31,7 @@ export SUPER_ADMINS_GROUP="sam-super-admins@test.firecloud.org"
 export TERRA_GOOGLE_ORG_NUMBER="mock-org-number"
 export TOS_ENABLED="true"
 export TOS_GRACE_PERIOD_ENABLED="true"
-export TOS_URL="app.terra.bio/#terms-of-service"
-export TOS_VERSION="0"
+export TOS_BASE_URL="classpath:tos"
+export TOS_VERSION="1"
 
 export SAM_LOG_APPENDER="Console-Standard"
