--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1451,6 +1451,7 @@ blockedEmailDomains = ["qwiklabs-gsuite.net", "qwiklabs.net"]
 
 termsOfService {
   isGracePeriodEnabled = false
+  baseUrl: "classpath:tos"
 }
 
 prometheus {
