--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -40,7 +40,7 @@ termsOfService {
   isTosEnabled = ${?TOS_ENABLED}
   isGracePeriodEnabled = ${?TOS_GRACE_PERIOD_ENABLED}
   version = ${?TOS_VERSION}
-  url = ${?TOS_URL}
+  baseUrl = ${?TOS_BASE_URL}
 }
 
 oidc {
