--- a/env/local.env
+++ b/env/local.env
@@ -36,7 +36,7 @@ export SUPER_ADMINS_GROUP="sam-super-admins@test.firecloud.org"
 export TERRA_GOOGLE_ORG_NUMBER="400176686919"
 export TOS_ENABLED="true"
 export TOS_GRACE_PERIOD_ENABLED="true"
-export TOS_URL="app.terra.bio/#terms-of-service"
+export TOS_BASE_URL="https://raw.githubusercontent.com/broadinstitute/terra-terms-of-service/main/versions"
 export TOS_VERSION="1"
 
 export SAM_LOG_APPENDER="Console-Standard"
