--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -62,6 +62,8 @@ termsOfService {
   enabled = false
   version = 1
   url = "app.terra.bio/#terms-of-service"
+  rollingAcceptanceWindowExpirationDatetime = "2019-01-01T00:00:00Z"
+  rollingAcceptanceWindowPreviousTosVersion = 0
 }
 
 petServiceAccount {
