Responding to trevyn's comments. Make tos config params nullable.

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -63,7 +63,7 @@ termsOfService {
   version = 1
   url = "app.terra.bio/#terms-of-service"
   rollingAcceptanceWindowExpirationDatetime = "2019-01-01T00:00:00Z"
-  rollingAcceptanceWindowPreviousTosVersion = 0
+  previousVersion = 0
 }
 
 petServiceAccount {
