--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -130,7 +130,7 @@ db {
     poolMaxSize = 8
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
-    url = ${?POSTGRES_URL}
+    url = ${?POSTGRES_READ_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
   }
@@ -145,7 +145,7 @@ db {
     # Changes to this value should be reflected in liquibase.properties
     driver = "org.postgresql.Driver"
     # Changes to this value should be reflected in liquibase.properties
-    url = ${?POSTGRES_URL}
+    url = ${?POSTGRES_WRITE_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
   }
@@ -158,7 +158,7 @@ db {
     poolMaxSize = 5
     poolConnectionTimeoutMillis = 5000
     driver = "org.postgresql.Driver"
-    url = ${?POSTGRES_URL}
+    url = ${?POSTGRES_WRITE_URL}
     user = ${?POSTGRES_USERNAME}
     password = ${?POSTGRES_PASSWORD}
   }
